@@ -50,7 +50,7 @@
 //
 
 #ifdef _WIN32
-#define DEFAULT_CONFIG_FILE   _T("C:\\NetXMS.conf")
+#define DEFAULT_CONFIG_FILE   _T("C:\\netxmsd.conf")
 #else
 #define DEFAULT_CONFIG_FILE   _T("/etc/netxmsd.conf")
 #endif
